# fiverx-client

./: .gitignore  MANIFEST.in  README.md  README.txt  fiverx.ini.sample  requirements.txt  setup.cfg  setup.py  submission.ini.sample
srw/fiverx_client/: cli_client.py  extract_payload.py  fetch_prescriptions.py  logging_utilities.py  submit_prescription.py  utils.py
srw/fiverx_client/lib/: result.py
srw/fiverx_client/lib/tests/: result_test.py
srw/fiverx_client/soapclient/: __init__.py  baseutils.py  ladeRzDienste.py  ladeRzVersion.py  ladeStatusRezept.py  payload_helpers.py  payload_validation.py  pruefeRezept.py  raw.py  sendeRezepte.py  storniereRezept.py
srw/fiverx_client/soapclient/static/: RZeRezept_01_08.xsd  RZeRezept_01_10.xsd
