[metadata]
name          = FiveRX Client
version       = file: VERSION.txt

long_description = file:README.md
long_description_content_type = text/markdown

author        = Felix Schwarz
author_email  = felix.schwarz@schwarz.eu
url           = https://github.com/steinreichwald/fiverx-client
license       = proprietary

project_urls =
    Code = https://github.com/steinreichwald/fiverx-client


[options]
python_requires = >= 3.6

packages =
    srw.fiverx_client
    srw.fiverx_client.lib
    srw.fiverx_client.soapclient
    srw.fiverx_client.soapclient.static
namespace_packages = srw
zip_safe = false
include_package_data = true

install_requires =
    #--index-url=https://www.steinreichwald.net/srw.link/dependencies/
    argparse
    docopt
    babel
    lxml
    requests
    setuptools
    # >= 0.6dev: changed import locations, e.g. SOAPError
    soapfish >= 0.6dev

[options.entry_points]
console_scripts =
    fiverx-fetch-prescriptions  = srw.fiverx_client.fetch_prescriptions:main
    srwlink-client              = srw.fiverx_client.cli_client:client_main
    srwlink-extract-payload     = srw.fiverx_client.extract_payload:extract_payload_main


[nosetests]
nologcapture=True

